line added under navbar, profile picture circle now, navbar spacing fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,11 @@ padding-bottom: -20px;
 
 }
 
+.followbutton {
+  width:70px;
+    height:50px;
+}
+
 .resize {
     width:50px;
     height:50px;
@@ -115,16 +120,26 @@ height: 100px;
   background: #eee;
 }
 
+.horizontallinenavbar {
+width:100%; 
+height:.5px;
+background: #eee;
+}
+
+.postlinkinput {
+
+}
+
 .greybox {
     width: 320px;
     padding: 10px;
-    border: 5px solid gray;
+    border: 1.5px solid gray;
     margin: 0; 
 }
 .greyboxaddlink {
    width: 70%;
    height: 500px;
-    border: 5px solid gray;
+    border: 2px solid gray;
 }
 
 .followbox{
